# bootstack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LIBRARY_STRUCTURE.md  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  zensical.toml
.github/: DISCUSSIONS.md
.github/DISCUSSION_TEMPLATE/: ideas-feedback.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/scripts/: release_notes.py
.github/workflows/: docs.yml  release.yml
_template/: widget-action-template.md  widget-data-display-template.md  widget-dialog-template.md  widget-form-template.md  widget-layout-template.md  widget-navigation-template.md  widget-overlay-template.md  widget-selection-template.md
analysis/: cli-implementation-plan.md  cli-review.md  cli-testing.md
assets/: make_ico.py
development/: ENHANCED_POSITIONING.md  SEMANTIC_KEYS.md  architecture.md  bench_recolor.py  button_padding.py  card_form_demo.py  create_64x64_button.py  debug_centering.py  debug_centering2.py  default_buttons.py  demo_contextmenu.py  demo_expander.py  demo_selectbox.py  dev_toast.py  docs-layout.md  filter_dialog.py  hot_reload_demo.py  hot_reload_menu_demo.py  hot_reload_multi.py  hot_reload_page.py  hot_reload_shell_demo.py  hot_reload_video.py  icon_testing.py  menu_dev.py  recolor_perf_notes.md  slider_progressbar_demo.py  surface_color.py  v2_api_proposal.md  v2_base_layer_plan.md  verify_recolor_equivalence.py
development/filedialogs/: filedialog_methods.py
development/validatedinput/: inputgroup.py
docs/: CNAME  conf.py  gen_ref_pages.py  index.md  index.rst  release-notes.rst  requirements.txt  roadmap.rst
docs/_dev/: api-reference-restructure.md  appshell-navigation-spec.md  appshell-sidenav-refactor.md  field-validation-system.md  field-value-dtype.md  layout-redesign.md  macos-window-chrome.md  menu-redesign.md  option-databag.md  picture-suite.md  review-2026-06-22-trust-audit.md  select-options-databag.md  theme-bootstrap-alignment.md  theme-repaint-architecture.md  typing-review.md  unified-toolbars.md  visualization-widget.md  widget-api-audit.md  widget-review-and-docs-standards.md
docs/_static/: custom.css
docs/_template/: widget-dialog-template.md  widget-input-template.md  widget-navigation-template.md  widget-overlay-template.md  widget-selection-template.md
docs/api/: accordion.rst  actions.rst  appshell.rst  badge.rst  button.rst  buttongroup.rst  calendar.rst  card.rst  checkbox.rst  codeeditor.rst  color-dialog.rst  contextmenu.rst  data-display.rst  datefield.rst  dialog.rst  dialogs.rst  events.rst  filter-dialog.rst  font-dialog.rst  formdialog.rst  forms.rst  gauge.rst  grid.rst  groupbox.rst  hstack.rst  index.rst  input-dialogs.rst  inputs.rst  label.rst  layout.rst  listview.rst  menubutton.rst  menus-and-toolbars.rst  message-dialogs.rst  navigation.rst  numberfield.rst  overlays.rst  pagestack.rst  passwordfield.rst  pathfield.rst  (+27 more)
docs/api-reference/: application.rst  bootstack.rst  clipboard.rst  data.rst  dev.rst  dialogs.rst  errors.rst  events.rst  i18n.rst  images.rst  index.rst  reactivity.rst  scheduling.rst  shortcuts.rst  signals.rst  store.rst  streams.rst  style.rst  theming.rst  types.rst  validation.rst  widgets.rst
docs_scripts/: _general_testing.py  demo_app.py  gen_api.py  guides_app_structure_appshell.py  guides_app_structure_frameless.py  guides_app_structure_min_app.py  guides_color_styled_form.py  guides_datatables_quick_start.py  guides_datatables_results_browser.py  guides_forms_quickstart.py  guides_forms_sections.py  guides_forms_signup.py  guides_forms_single_column.py  guides_forms_two_column.py  guides_icons.py  guides_icons_icon_only.py  guides_icons_toolbar_actions.py  guides_layout_card.py  guides_layout_gridframe.py  guides_layout_packframe.py  guides_localization_locale.py  guides_localization_value_formatting.py  guides_menu_contextmenu.py  guides_menu_menubar.py  guides_menu_menubar_widget.py  guides_navigation_appshell.py  guides_navigation_combining_patterns.py  guides_navigation_custom_sidebar.py  guides_scale_quickstart.py  guides_spacing_gallery_dense.py  guides_spacing_master_detail.py  guides_spacing_settings_panel.py  guides_spacing_toolbar.py  guides_typography_widgets.py  navigation_appshell.py  navigation_tabs.py  quick_start_hello_world.py  widget_dateentry.py  widget_numericentry.py  widget_spinnerentry.py  (+68 more)
docs_templates/: example-page-template.md  widget-page-template.md
examples/: accordion_demo.py  appshell_demo.py  card_demo.py  contextmenu_config_demo.py  contextmenu_demo.py  datasource_demo.py  datepicker_demo.py  debug_buttongroup_density.py  demo.py  demo_buttongroup.py  demo_datediaog.py  demo_dropdown_button.py  demo_filter_dialog.py  demo_formdialog.py  demo_grouped_form.py  demo_menubar.py  demo_option_menu.py  demo_radiogroup.py  demo_signals_widgets.py  demo_togglegroup.py  entry_density_demo.py  ex_appshell.py  ex_layout.py  ex_quickstart.py  ex_signals.py  ex_styling.py  expander_demo.py  expander_navigation_demo.py  field_demo.py  file_datasource_demo.py  font_modifier_demo.py  font_modifier_test.py  form_demo.py  grid_comparison_demo.py  layout_demo.py  listitem_demo.py  listview_demo.py  localization_widgets_demo.py  message_dialog_demo.py  pagestack_demo.py  (+14 more)
memory/: feedback_demo_pattern.md  feedback_no_v2_terminology.md
overrides/: main.html
templates/: README.md
tests/: conftest.py  demo_fontdialog.py  demo_theme_provider.py  localized_label.py  localized_widget_demo.py  notebook_navigation.py  run_gui.py  test_dialog_anchor.py  test_events_doc_coverage.py  test_hot_reload.py  test_images.py  test_images_gui.py  test_intl_format.py  test_menu_render_themed.py  test_navmodel.py  test_on_color_contrast.py  test_public_surface.py  test_store.py  test_theme_from_existing.py  test_togglegroup.py  test_validation_rules.py  test_variables.py  validation_mixin_demo.py
tools/: README.md  audit_messages.py  gen_api_docs.py  generate_icon_metrics.py  make_i18n.py
(+1567 files in other folders)
