[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bootstack"
version = "0.1.0"
description = "A full UI framework for Python desktop apps built on tkinter — rich widgets, theming, and application structure out of the box."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Israel Dryer", email = "israel.dryer@gmail.com" }
]
keywords = [
    "tkinter",
    "ttk",
    "gui",
    "desktop",
    "python3",
    "ui",
    "widgets",
    "theming",
    "cross-platform",
    "modern",
    "framework",
    "application-framework",
    "desktop-ui",
    "python-gui"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: User Interfaces",
    "Operating System :: OS Independent",
]

dependencies = [
    "pillow>=10,<=12",
    "ttkbootstrap-icons>=4",
    "ttkbootstrap-icons-bs>=1",

    # Backported typing primitives (Self, Unpack, ParamSpec, etc.)
    "typing-extensions>=4.10",

    # Runtime localization/formatting stack
    "Babel>=2.12",
    "python-dateutil>=2.9",
    "dateparser>=1.1",

    # Windows-specific: modern window effects (mica, acrylic, etc.)
    "pywinstyles>=1.8; sys_platform == 'win32'",

    # Multi-monitor support for proper window centering
    "screeninfo>=0.8",
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/israel-dryer/bootstack"
Documentation = "https://bootstack.readthedocs.io/en/latest/"

[project.scripts]
bootstack = "bootstack.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bootstack" = [
    "themes/*.json",
    "assets/*",
    # ship compiled gettext catalogs within the package
    "assets/locales/**/LC_MESSAGES/*.mo",
]