[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bootstack"
version = "0.1.0a16"
description = "From idea to a shipped desktop app, fast — a declarative, reactive, batteries-included Python UI framework with 60+ widgets, semantic theming, and built-in packaging."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Israel Dryer", email = "israel.dryer@gmail.com" }
]
keywords = [
    "tkinter",
    "ttk",
    "gui",
    "desktop",
    "python3",
    "ui",
    "widgets",
    "theming",
    "cross-platform",
    "modern",
    "framework",
    "application-framework",
    "desktop-ui",
    "python-gui"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: User Interfaces",
    "Operating System :: OS Independent",
]

dependencies = [
    "pillow>=10,<=12",

    # Backported typing primitives (Self, Unpack, ParamSpec, etc.)
    "typing-extensions>=4.10",

    # Runtime localization/formatting stack
    "Babel>=2.12",
    "python-dateutil>=2.9",
    "dateparser>=1.1",

    # Windows-specific: modern window effects (mica, acrylic, etc.)
    "pywinstyles>=1.8; sys_platform == 'win32'",

    # Multi-monitor support for proper window centering
    "screeninfo>=0.8",
]

[project.optional-dependencies]
# Excel (.xlsx) export for Table. Write-only, zero-dependency, pure Python.
excel = [
    "XlsxWriter>=3",
]
# Columnar formats — read/write Parquet and Feather/Arrow via pyarrow.
parquet = [
    "pyarrow>=14",
]
# Scientific tabular format — read/write HDF5 via pandas + PyTables.
hdf5 = [
    "pandas>=2",
    "tables>=3.8",
]
# Visualization — embed matplotlib figures in a Chart widget.
viz = [
    "matplotlib>=3.8",
]
# Visualization with seaborn convenience layer on top of matplotlib.
viz-seaborn = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
docs = [
    "sphinx>=7.2",
    "pydata-sphinx-theme",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "myst-parser",
]

[project.urls]
Homepage = "https://github.com/israel-dryer/bootstack"
Documentation = "https://bootstack.org/"

[project.scripts]
bootstack = "bootstack.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bootstack" = [
    "assets/*",
    "assets/icons/*",
    # ship compiled gettext catalogs within the package
    "assets/locales/**/LC_MESSAGES/*.mo",
]

[tool.bumpversion]
current_version = "0.1.0a16"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<pre>a|b|rc)(?P<pre_n>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}{pre}{pre_n}",
    "{major}.{minor}.{patch}",
]
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release {new_version}"
message = "Release {new_version}"
allow_dirty = false

[tool.bumpversion.parts.pre]
optional_value = ""
first_value = ""
values = ["", "a", "b", "rc"]

[tool.bumpversion.parts.pre_n]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[tool.pytest.ini_options]
testpaths = ["tests/cli", "tests/widgets/public", "tests/data"]
markers = [
    "gui: requires a Tk display (deselect with -m 'not gui')",
    "isolated: constructs its own Tk root (App/AppShell/Window kwargs); must run in a dedicated process. Run the suite via `python tests/run_gui.py`, which executes the shared-root suite once and each isolated module in its own process.",
]

[tool.ruff.lint]
# F401: imported but unused — suppress for __init__.py where all imports are public re-exports
per-file-ignores = { "src/bootstack/__init__.py" = ["F401"] }
